// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BellIcon [common] example testing should match snapshot(s) for 1.basic 1`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-BellIcon"
  color="primary"
  isClickable={false}
  isDisabled={false}
  onClick={[Function]}
  onSelect={[Function]}
  size={16}
  viewBox="0 0 16 16"
>
  <g>
    <path
      d="M5.5 12.5v.5a2.5 2.5 0 1 0 5 0l.003-.495M14.5 12.5v-2s-1.884-1.587-1.884-6.024C12.616 3.575 11.707.5 8 .5S3.384 3.575 3.384 4.476C3.384 8.913 1.5 10.5 1.5 10.5v2h13z"
    />
  </g>
</Icon>
`;

exports[`BellIcon [common] example testing should match snapshot(s) for 1.basic 2`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-BellIcon"
  color="primary"
  isClickable={false}
  isDisabled={false}
  onClick={[Function]}
  onSelect={[Function]}
  size={16}
  viewBox="0 0 16 16"
>
  <g>
    <path
      d="M5.5 12.502v.5c0 1.381 1.119 2.5 2.5 2.5s2.5-1.119 2.5-2.5l.003-.495M3.056 7.432c-.54 2.214-1.556 3.07-1.556 3.07v2h13v-2s-1.884-1.587-1.884-6.024c0-.901-.909-3.976-4.616-3.976-.279 0-.543.017-.791.05"
      strokeLinecap="butt"
    />
    <path
      className="lucid-BellIcon lucid-BellIcon-is-info"
      d="M3.5-.148c1.737 0 3.15 1.413 3.15 3.15s-1.413 3.15-3.15 3.15S.35 4.739.35 3.002 1.763-.148 3.5-.148"
    />
  </g>
</Icon>
`;

exports[`BellIcon [common] example testing should match snapshot(s) for 1.basic 3`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-BellIcon"
  color="primary"
  isClickable={false}
  isDisabled={false}
  onClick={[Function]}
  onSelect={[Function]}
  size={16}
  viewBox="0 0 16 16"
>
  <g>
    <path
      d="M5.5 12.502v.5c0 1.381 1.119 2.5 2.5 2.5s2.5-1.119 2.5-2.5l.003-.495M3.056 7.432c-.54 2.214-1.556 3.07-1.556 3.07v2h13v-2s-1.884-1.587-1.884-6.024c0-.901-.909-3.976-4.616-3.976-.279 0-.543.017-.791.05"
      strokeLinecap="butt"
    />
    <path
      className="lucid-BellIcon lucid-BellIcon-is-success"
      d="M3.5-.148c1.737 0 3.15 1.413 3.15 3.15s-1.413 3.15-3.15 3.15S.35 4.739.35 3.002 1.763-.148 3.5-.148"
    />
  </g>
</Icon>
`;

exports[`BellIcon [common] example testing should match snapshot(s) for 1.basic 4`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-BellIcon"
  color="primary"
  isClickable={false}
  isDisabled={false}
  onClick={[Function]}
  onSelect={[Function]}
  size={16}
  viewBox="0 0 16 16"
>
  <g>
    <path
      d="M5.5 12.502v.5c0 1.381 1.119 2.5 2.5 2.5s2.5-1.119 2.5-2.5l.003-.495M3.056 7.432c-.54 2.214-1.556 3.07-1.556 3.07v2h13v-2s-1.884-1.587-1.884-6.024c0-.901-.909-3.976-4.616-3.976-.279 0-.543.017-.791.05"
      strokeLinecap="butt"
    />
    <path
      className="lucid-BellIcon lucid-BellIcon-is-warning"
      d="M3.5-.148c1.737 0 3.15 1.413 3.15 3.15s-1.413 3.15-3.15 3.15S.35 4.739.35 3.002 1.763-.148 3.5-.148"
    />
  </g>
</Icon>
`;

exports[`BellIcon [common] example testing should match snapshot(s) for 1.basic 5`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-BellIcon"
  color="primary"
  isClickable={false}
  isDisabled={false}
  onClick={[Function]}
  onSelect={[Function]}
  size={16}
  viewBox="0 0 16 16"
>
  <g>
    <path
      d="M5.5 12.502v.5c0 1.381 1.119 2.5 2.5 2.5s2.5-1.119 2.5-2.5l.003-.495M3.056 7.432c-.54 2.214-1.556 3.07-1.556 3.07v2h13v-2s-1.884-1.587-1.884-6.024c0-.901-.909-3.976-4.616-3.976-.279 0-.543.017-.791.05"
      strokeLinecap="butt"
    />
    <path
      className="lucid-BellIcon lucid-BellIcon-is-danger"
      d="M3.5-.148c1.737 0 3.15 1.413 3.15 3.15s-1.413 3.15-3.15 3.15S.35 4.739.35 3.002 1.763-.148 3.5-.148"
    />
  </g>
</Icon>
`;
